syntax = "proto2";

import "types.proto";

enum ErrCode {
  Unauthorized = 0;
}

message NetOk {}

message NetErr {
  optional ErrCode code = 1;
  optional string msg = 2;
}

message Handshake {
  optional string auth_key = 1;
}

message SvcLoad {
  optional string application_environment = 1;
  repeated string binds = 2;
  repeated string composite_binds = 3;
  optional string bldr_url = 4;
  optional string bldr_channel = 5;
  optional string config_from = 6;
  optional bool force = 7;
  optional string group = 8;
  optional string source = 9;
  optional string svc_encrypted_password = 10;
  optional Topology topology = 11;
  optional UpdateStrategy update_strategy = 12;
}
